####### kdevelop will overwrite this part!!! (begin)##########

EXTRA_DIST = \
	cmat.h		fcscmat.h	fmat.h		fortran.h \
	fspvec.h	index.h		lapack.h	lu.h \
	luX.h		qr.h		region1d.h	region2d.h \
	stopwatch.h	subscript.h	tnt.h		tntmath.h \
	tntreqs.h	transv.h	triang.h	trisolve.h \
	vec.h		vecadaptor.h	version.h

####### kdevelop will overwrite this part!!! (end)############

